chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accumulo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accumulo-manager-svc
            port:
              number: 9995
